<resources>
    <string name="app_name">Banco do Nordeste</string>

    <!-- ==================== activity_login ==================== -->
    <string name="txt_description_image"> Icon that represents the brand app</string>
    <string name="hint_username"> E-mail </string>
    <string name="hint_password"> Password </string>
    <string name="btn_login"> Login </string>
    <string name="btn_register">Cadastrar </string>

    <!-- ==================== activity_register_user ==================== -->
    <string name="txt_register_type_user">Qual tipo de perfil você deseja cadastrar?</string>
    <string name="btn_register_type_user">Pessoa Física</string>
    <string name="btn_register_type_user_company">Pessoa Jurídica</string>

    <!-- ==================== activity_register_user ==================== -->
    <string name="hint_register_email"> E-mail* </string>
    <string name="hint_register_phone"> Telefone* </string>
    <string name="hint_register_type_adress"> Tipo Endereço* </string>
    <string name="hint_register_adress"> Endereço* </string>
    <string name="hint_register_number"> Número </string>
    <string name="hint_register_extra_info"> Complemento </string>
    <string name="hint_register_neighborhood"> Bairro* </string>
    <string name="hint_register_cep"> CEP* </string>
    <string name="hint_register_city"> Cidade* </string>
    <string name="hint_register_uf"> UF* </string>

    <!-- Pessoa Fisica -->
    <string name="register_user_title">Cadastro Pesssoa Física </string>
    <string name="hint_register_username"> Nome*</string>
    <string name="hint_register_cpf"> CPF*</string>

    <!-- Pessoa Juridica -->
    <string name="register_user_company_title"> Cadastro Pessoa Jurídica</string>
    <string name="hint_register_company_name"> Razão Social* </string>
    <string name="hint_register_cnpj"> CNPJ* </string>

    <!-- ==================== activity_register_service ==================== -->
    <string name="register_service_title"> Cadastrar Serviço</string>
    <string name="register_service_name"> Qual Serviço Você quer Cadastrar? </string>
    <string name="register_service_price"> Qual o Valor do Serviço?  </string>
    <string name="register_service_price_ticket"> Qual o Preço da Passagem?</string>
    <string name="register_service_mobility"> Pode ir na Casa da Pessoa Fazer o Serviço?</string>
    <string name="register_service_radio_yes"> Sim</string>
    <string name="register_service_radio_no">Não</string>
    <string name="register_service_type_contact"> Onde Deseja Receber Contato das Clientes?</string>
    <string name="register_service_radio_whatsapp"> WhatsApp</string>
    <string name="register_service_radio_email"> Email</string>

    <!-- Checkbox -->
    <string name="check_cabeleleira">Cabelereira</string>
    <string name="check_manicure">Manicure</string>
    <string name="check_pinta_cabelo"> Pinta cabelo</string>
    <string name="check_cozinheira">Cozinheira</string>
    <string name="check_boleira">Boleira - doces e salgados</string>
    <string name="check_faz_pizza"> Faz pizza</string>
    <string name="check_almoco"> Faz almoço</string>

    <!-- Buttons-->
    <string name="btn_register_service">Cadastrar</string>

    <!-- ==================== activity_profile ==================== -->
    <string name="profile_title"> Profile </string>
    <string name="profile_label_data"> Personal Data </string>
    <string name="profile_label_service"> Services </string>
    <string name="profile_label_type_contact"> Contract Type</string>


    <!-- ==================== activity_learn_subject ==================== -->
    <string name="learn_subject_title"> Conteúdo Gratuito </string>
    <string name="link_marmitex">
        <a href="https://www.mulheresempreendedoras.net.br/como-ganhar-dinheiro-vendendo-marmitex/">Como vender Marmitex?</a>
    </string>
    <string name="link_summer">
        <a href="https://www.mulheresempreendedoras.net.br/ideias-para-ganhar-dinheiro-no-verao/">O que vender no verão?</a>
    </string>

    <string name="link_brigadeiro">
        <a href="https://www.mulheresempreendedoras.net.br/como-ganhar-dinheiro-vendendo-brigadeiros/">Vender Brigadeiro</a>
    </string>

    <string name="link_easter">
        <a href="https://www.mulheresempreendedoras.net.br/ideias-para-ganhar-dinheiro-na-pascoa/"> Como ganhar dinheiro na Páscoa?</a>
    </string>

    <string name="link_revenda_produtos">
        <a href="https://www.mulheresempreendedoras.net.br/produtos-para-revenda-por-catalogo/">Como revender produtos?</a>
    </string>

    <string name="link_ideias_trabalho">
        <a href="https://www.mulheresempreendedoras.net.br/ideias-para-trabalhar-em-casa/">Mais ideias para ganhar dinnheiro em casa</a>
    </string>
</resources>