<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.RegisterUserCompanyActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_logo"
            style="@style/Logo"
            android:contentDescription="@string/txt_description_image"
            android:src="@mipmap/ic_logo_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_title"
            style="@style/TextViewTitle"
            android:layout_marginTop="16dp"
            android:text="@string/register_user_company_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_company_name"
                style="@style/TextBox"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_company_name"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_company_name"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:inputType="textNoSuggestions"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColorHint="#546E7A" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_cnpj"
                style="@style/TextBox"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_cnpj"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_cnpj"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:inputType="phone|textNoSuggestions"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColorHint="#546E7A" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_email"
            style="@style/TextBox"
            android:layout_margin="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/hint_register_email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_phone"
            style="@style/TextBox"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/hint_register_phone"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_register_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone|textNoSuggestions"
                android:maxLength="11"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_register_phone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_cep"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_cep"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_cep"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_neighborhood"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_neighborhood"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_adress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_neighborhood"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_city"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_city"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_city"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_type_adress"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_type_adress"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_type_adress"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_adress"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_adress"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_adress"
                    android:layout_width="213dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_number"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_number"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_adress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_number"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_extra_info"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_extra_info"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_adress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_extra_info"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_extra_uf"
                style="@style/TextBox"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_register_uf"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_adress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_register_uf"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- ========= BUTTON ========= -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_user"
            style="@style/Button"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:onClick="registerUserCompany"
            android:text="@string/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>